Fixed & improved pricing-plan visual on mobile

--- a/client/src/views/user/post/layouts/mobile/expire/index.style.scss
+++ b/client/src/views/user/post/layouts/mobile/expire/index.style.scss
@@ -4,37 +4,29 @@
 
 .pricing {
   &--plan {
-    height: 72vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
   }
 }
 .plan {
   &--expire {
-    position: fixed;
-    top: 55px;
-    left: 20px;
     text-align: center;
     padding-bottom: 0.5rem;
   }
   &--table {
-    flex-grow: 1;
-    margin-top: 4vh;
+    height: 90%;
   }
 }
 
 .table {
-  height: 100%;
   &--card {
-    width: 300vw;
-    height: 100%;
+    height: 90%;
     display: flex;
     margin: 0.5rem 0;
   }
   &--indicator {
-    position: fixed;
-    bottom: 13vh;
-    left: 42%;
+    height: 10%;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -42,81 +34,49 @@
   }
 }
 
-.card {
-  width: 100vw;
-  background-color: #27292d;
-  padding: 0.5rem 1.5rem;
-  margin: 0 1rem;
-  border: none;
-  display: flex;
-  flex-direction: column;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  > * {
-    text-align: center;
-    padding: 0.35rem 0;
-    font-size: 2.2vh;
+.indicator {
+  &--holder {
+    width: 90vw;
+    background-color: #27292d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
-  &--type {
-    font-size: 2.5vh;
-    font-weight: bold;
+}
+
+.holder {
+  &--btn {
+    width: 31%;
+    font-size: 3.5vw;
     text-transform: uppercase;
-    color: #ffb94a;
-    padding-bottom: 0;
-  }
-  &--price {
-    display: flex;
-    justify-content: center;
-    font-size: 5vh;
-    font-weight: bold;
-    color: #ffb94a;
-    &::after {
-      content: 'đ';
-      font-size: 1.3rem;
-    }
-  }
-  &--auto-unfriend {
-    margin-bottom: auto;
-  }
-  &--btn-buy {
     background-color: #27292d;
     color: #ffb94a;
-    border-radius: 50px;
-    border: 2px solid #ffb94a;
+    border: none;
+    border-bottom: 4px solid #ffb94a00;
     outline: none;
-    padding: 0.5rem 0;
-    margin-bottom: 0.5rem;
-    font-weight: bold;
+    padding: 0.4rem 1.2rem;
+    margin: 0 0.2rem; 
     cursor: pointer;
     user-select: none;
+    transition: .3s all;
   }
 }
 
-.dot {
-  cursor: pointer;
-  height: 0.8rem;
-  width: 0.8rem;
-  margin: 0.5rem 0.3rem;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transform: scale(0.9);
-  transition: all 0.6s ease;
-  &-active{
-    transform: scale(1);
-    background-color: #fff;
-  }
+.active {
+  font-weight: bold;
+  border-bottom: 4px solid #ffb94a;
+}
+.slide-enter-active,
+.slide-leave-active {
+  transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
 }
 
-
-
-/*Transition popup*/
-.popup-enter-active,
-.popup-leave-active {
-  transition: opacity 1s;
-}
-.popup-enter,
-.popup-leave-to {
+.slide-enter {
   opacity: 0;
+  transform: translateY(10px);
+}
+
+.slide-leave-to {
+  opacity: 0;
+  transform: translateY(20px) scale(0.9);
 }
 
 /* ChangeColor */
